# elaboration-zoo-lsp

./: .gitignore  Cargo.toml  README.md  README.zh.md  _analyze_offset.py  _fix5.py  _rm_switch.py  build_err.txt  commit_msg.txt  result.txt  retry_push.sh
.github/workflows/: ci.yml
docs/: hdl-design-discussion.md  hdl-design.md  hdl-redesign-plan.md  hdl-syntax.md  l13-eq-unify-failure.md  lsp-architecture.md  opt-pattern-match.md  opt-typeclass.md  opt-verilog.md  parser-error-upgrade-notes.md  pattern-match-refinement-analysis.md  syntax.md  trait-system-analysis.md
examples/: alu.typort  hdl_ops.typort  theorem_proving.typort  typeclass_complex.typort
src/: bimap.rs  client.rs  lib.rs  list.rs  ls.rs  main.rs  parser_lib.rs  parser_lib_resilient.rs  sampler.rs
src/L01a_fast/: list_arena.rs  mod.rs  nbe_closure1.rs  nbe_closure2.rs  nbe_closure22.rs  nbe_closure3.rs  nbe_closure4.rs  nbe_closure_bak.rs  nbe_closure_rc.rs  nbe_closure_rc2.rs  readme.md
src/L03_holes/: mod.rs
src/L04_implicit/: cxt.rs  elaboration.rs  mod.rs  unification.rs
src/L05_pruning/: cxt.rs  elaboration.rs  mod.rs  syntax.rs  unification.rs
src/L06_string/: cxt.rs  elaboration.rs  mod.rs  pretty.rs  unification.rs
src/L07_sum_type/: cxt.rs  elaboration.rs  mod.rs  pattern_match.rs  pretty.rs  unification.rs
src/L07a_depend_pm/: cxt.rs  elaboration.rs  mod.rs  pattern_match.rs  pretty.rs  subst.rs  unification.rs
tests/: parser_error_tests.rs  test_rope_offset.rs  trait_system_tests.typort
vscode_extension/: .vscodeignore  LICENSE  package-lock.json  package.json
(+126 files in other folders)
